--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -460,7 +460,7 @@
     "\n",
     "\n",
     "\n",
-    "Other than representing my abbreviations of identity, IMDb is an Amazon setup toward the entertainment industry about film and cinema. I am bringing information attainable at the primary level toward consumer interest of film backgrounds to IMDb Pro stipulations that aid industry searches toward gaining knowledge and industry contacts. And with the enforcement of Beautiful Soup, the process begins packaged.\n",
+    "Other than representing my abbreviations of identity, IMDb is an Amazon setup toward the entertainment industry about film and cinema. I am bringing information attainable at the primary level toward consumer interest of film backgrounds to IMDb Pro stipulations that aid industry searches toward gaining knowledge and industry contacts (Ganesh). And with the enforcement of Beautiful Soup, the process begins packaged.\n",
     "\n",
     "\n",
     "\n"
@@ -519,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below were the adjustments made with the focus of attributes of interest ranging from \"movie_title_arr\" to \"image_id_arr.\""
+    "Below were the adjustments made with the focus of attributes of interest ranging from \"movie_title_arr\" to \"image_id_arr\" (Ganesh)."
    ]
   },
   {
@@ -540,14 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Topic modeling aided the directors pulled in were now used as a resource toward a viable topic model presentation. Ranging from \"directors/Adam_Curtis.txt\" to \"directors/Mia_Hansen-Love.txt,\" this journey was accomplished, which was stored and represented in the path \"directors/\" encasing file names. As a result, \"Feelings and stories of being surveilled are a form of evidence\" (Benjamin 80). While an \"Interface is always an argument, and combines presentation (form/format), representation (contents), navigation (wayfinding), orientation (location/breadcrumbs), and connections to the network (links and social media)\" (Drucker 181)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Below was the phase of Scraping the elements above collected toward introducing us to Beautiful Soup."
+    "Topic modeling aided the directors pulled in were now used as a resource toward a viable topic model presentation. Ranging from \"directors/Adam_Curtis.txt\" to \"directors/Mia_Hansen-Love.txt,\" this journey was accomplished, which was stored and represented in the path \"directors/\" encasing file names. As a result, \"Feelings and stories of being surveilled are a form of evidence\" (Benjamin 80). While an \"Interface is always an argument, and combines presentation (form/format), representation (contents), navigation (wayfinding), orientation (location/breadcrumbs), and connections to the network (links and social media)\" (Drucker 181). Below was the phase of Scraping the elements above collected toward introducing us to Beautiful Soup (Ganesh)."
    ]
   },
   {
@@ -604,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Through IMDb data, the foster function responsible for iteration is derived. Now, extraction occurs and formulates. URL elements are then explored and filtered to push this journey forward. "
+    "Through IMDb data, the foster function responsible for iteration is derived. Now, extraction occurs and formulates. URL elements are then explored and filtered to push this journey forward (Below was the phase of Scraping the elements above collected toward introducing us to Beautiful Soup (Ganesh)."
    ]
   },
   {
@@ -661,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Progression is realized assembled below in the relational URLs formulating filtered films. "
+    "Progression is realized assembled below in the relational URLs formulating filtered films (Below was the phase of Scraping the elements above collected toward introducing us to Beautiful Soup (Ganesh)."
    ]
   },
   {
@@ -796,7 +789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The downloading function of \"download_stories\"  brings the URLs toward a primary function teamed up with the \"MAX_THREADS\" number of acceptance of requests."
+    "The downloading function of \"download_stories\"  brings the URLs toward a primary function teamed up with the \"MAX_THREADS\" number of acceptance of requests (Below was the phase of Scraping the elements above collected toward introducing us to Beautiful Soup (Ganesh)."
    ]
   },
   {
@@ -822,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the end, the download function progresses our pursuit toward attaining the required and requested data."
+    "In the end, the download function progresses our pursuit toward attaining the required and requested data (Ganesh)."
    ]
   },
   {
@@ -856,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a result, IMDB is attainable and readable toward analyzing a progressed data collection."
+    "As a result, IMDB is attainable and readable toward analyzing a progressed data collection (Ganesh). And with the separation, the anomaly factor that was not working with the code movement was fixed by the separation of code.  Thankfully came me to resolve this issue on the journey sought after."
    ]
   },
   {
@@ -996,7 +989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, toward a more exploratory interest of the future (image bonus). The Chart Toppers section of IMDb sounded interesting to me.  With the addition of \"requests\" and \"re.\" The progress embarked upon an URL focus \"http://www.imdb.com/chart/top.\" And evolved to encompass \"Movies, Links, Crew, Ratings, Votes, etc.\""
+    "Then, toward a more exploratory interest of the future (image bonus). The Chart Toppers section of IMDb sounded interesting to me.  With the addition of \"requests\" and \"re.\"The progress embarked upon an URL focus \"http://www.imdb.com/chart/top.\" And evolved to encompass \"Movies, Links, Crew, Ratings, Votes, etc.\" "
    ]
   },
   {
@@ -1982,6 +1975,8 @@
     "Folgert Karsdorp, et al. Humanities Data Analysis Case Studies with Python. Princeton Oxford Princeton University Press, 2021.\n",
     "\n",
     "Salter, Anastasia. University of Central Florida. Texts and Technology, 2021.\n",
+    "\n",
+    "Ganesh, Shiv Kumar. “How to Scrape IMDB Data Using Beautiful Soup.” Medium, Python in Plain English, 20 Apr. 2021, https://python.plainenglish.io/how-to-scrape-imdb-data-9d7535b98576.\n",
     "\n",
     "Turkel, William J., and Adam Crymble. “Code Reuse and Modularity in Python.” Programming Historian, 17 July 2012, https://programminghistorian.org/en/lessons/code-reuse-and-modularity.\n",
     "\n",
