--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -1687,7 +1687,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Visualization Goals\n",
+    "## Visualization Goals\n",
     "\n",
     "Intiated with importing sklearn (scikit) learn's CountVectorizer, that helps to enhance and organize a document-term matrix. This enables filtering with the removal of \"words, in this pedagogical setting to reduce the considerable time required to fit the topic model\" (Karsdorp, Kestemont, Riddell 297). In association with the use of the mixture model the \"topic-word distributions\" there was use of reference of \"document-topic distributions\" by importing \"sklearn.decomposition as decomposition model = decomposition.LatentDirichletAllocation( n_components=100, learning_method='online', random_state=1)\" (Karsdorp, Kestemont, Riddell 300). Here 100 topics to create patterns\n"
    ]
