--- a/Reflection (CC).ipynb
+++ b/Reflection (CC).ipynb
@@ -143,13 +143,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Images"
+    "## Images (Currently, in paper appendix turned in)\n",
+    "Below experimentation will continue to resolve the posting challenge.\n",
+    "```\n",
+    "![]()\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### [Image]\n",
     "![]()"
    ]
   },
@@ -157,83 +162,129 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "image 1.png"
+    "#### [Image]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### [Image]\n",
+    "![]()"
+   ]
   }
  ],
  "metadata": {
