--- a/Reflection (DD).ipynb
+++ b/Reflection (DD).ipynb
@@ -86,7 +86,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Figures:"
+    "### Figures (Currently, in paper appendix turned in)\n",
+    "Below experimentation will continue to resolve the posting challenge.\n",
+    "```\n",
+    "![]()\n",
+    "```"
    ]
   },
   {
@@ -94,8 +98,7 @@
    "metadata": {},
    "source": [
     "#### [Figure 1]\n",
-    "\n",
-    "\n",
+    "![]()\n",
     "\n"
    ]
   },
@@ -103,63 +106,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 2]"
+    "#### [Figure 2]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 3]"
+    "#### [Figure 3]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 4]"
+    "#### [Figure 4]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 5]"
+    "#### [Figure 5]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 6]"
+    "#### [Figure 6]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 7]"
+    "#### [Figure 7]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 8]"
+    "#### [Figure 8]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 9]"
+    "#### [Figure 9]\n",
+    "![]()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Figure 10]"
+    "#### [Figure 10]\n",
+    "![]()"
    ]
   }
  ],
