--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -165,7 +165,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics Assignment #7"
+    "### Basics Assignment #7\n",
+    "Stage Five: Calculate the Euclidean distance between the documents, using two keywords as the point of comparison\n",
+    "Note: Nested four-loop compares and helps to avoid redundancy (loop logic solutions).\n",
+    "\n",
+    "Euclidean distance's use allows for \"calculating the distance between two documents in a space, ... looks at the exact coordinates of the two documents: it connects them with a straight line, ...and returns the length of that line\" (Karsdopp, Kestemont, Riddell 100). As a result, the comparisons or calculated distances between supplied .txt brought interest and allowed comparisons.\n",
+    "```\n",
+    "def euclidean_distance(a, b):\n",
+    "    \"\"\"Compute the Euclidean distance between two vectors.\n",
+    "\n",
+    "    Note: ``numpy.linalg.norm(a - b)`` performs the\n",
+    "    same calculation using a slightly faster method.\n",
+    "\n",
+    "    Arguments:\n",
+    "        a (numpy.ndarray): a vector of floats or ints.\n",
+    "        b (numpy.ndarray): a vector of floats or ints.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The euclidean distance between vector a and b.\n",
+    "\n",
+    "    Examples:\n",
+    "        >>> import numpy as np\n",
+    "        >>> a = np.array([1, 4, 2, 8])\n",
+    "        >>> b = np.array([2, 1, 4, 7])\n",
+    "        >>> round(euclidean_distance(a, b), 2)\n",
+    "        3.87\n",
+    "\n",
+    "    \"\"\"\n",
+    "    return np.sqrt(np.sum((a - b) ** 2))\n",
+    "vectors = []\n",
+    "for x in range(0, len(titles)):\n",
+    "    vectors.append([cast_counts[x],actor_counts[x]])\n",
+    "\n",
+    "for x in range(0, len(vectors)):\n",
+    "    for y in range(x+1, len(vectors)):\n",
+    "        comparison = euclidean_distance(np.array(vectors[x]),np.array(vectors[y]))\n",
+    "        print(f'{titles[x]} vs {titles[y]}: {comparison}')\n",
+    "```\n",
+    "\n",
+    "\n"
    ]
   },
   {
