--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -32,7 +32,7 @@
    "source": [
     "### Basics Assignment #1\n",
     "\n",
-    "Informative with the fundamental compilations presented value experimenting from Coding Exercise One, famed \"Hello World.\" \n",
+    "Informative with the fundamental compilations presented value experimenting from Coding Exercise One, famed \"Hello World.\"  It is great to be back with some of the codings we discussed in previous classes. Furthermore, the overall installation of Anaconda was completed. And after going through some of the demos, I see that this interface is valuable. Of course, working with and installing Jupyter Notebooks was new, but watching and following your videos' instructions has aided the process and helped me move forward with solutions to challenges. As experimenting with attempting changes with the sample notebooks supplied coding with the famed a.k.a \"Hello World\" example. Overall, I feel refreshed and excited to proceed, even with some errors and uncertainty initially. \n",
     "\n",
     "```\n",
     "f = open('helloworld.txt','w')\n",
@@ -62,7 +62,7 @@
    "source": [
     "### Basics Assignment #2\n",
     "\n",
-    "Then toward importing the libraries, you need to read in web content. Use the model in \"WebScraping.ipynb.\" Set the URL to a website of interest for representation aspects of work if it's a static sit\n",
+    "In my first attempt, I utilized an Adaptation focused website for research and experimented with some code and inputs to complete the process (including a Bonus attempt). It was unsuccessful and had little connection. By sticking with it, the new effort became clearer and resulted in a systematic response. As a result of this importing the libraries, there was a realized need to read in web content using the model in \"WebScraping.ipynb,\" which Set the URL to a website of interest for representation aspects of work if it's a static entity.\n",
     "\n",
     "```\n",
     "import urllib.request, urllib.error, urllib.parse\n",
@@ -87,7 +87,7 @@
     "### Basics Assignment #3\n",
     "\n",
     "\n",
-    "Next, splicing the content imported included only the primary text of interest. The need to strategically investigate the website of interest was chosen toward tags used to represent a start and end of the spliced location (Using a .ipynb representation).\n",
+    "After submitting the Github link, I worked on the bonus section and practiced the options to find a format to spell out a manufactured script that stated: \"Got a tip? Definitive Voice of Entertainment Hollywood Hollywood Hollywood.\" Next shown here, splicing the content imported included only the primary text of interest. The need to strategically investigate the website of interest was chosen toward tags used to represent a start and end of the spliced location (Using a .ipynb representation).\n",
     "\n",
     "```\n",
     "\n",
@@ -111,7 +111,7 @@
     "\n",
     "### Basics Assignment #4\n",
     "\n",
-    "Stop words are used to remove all less relevant words from a count in order to create a custom list based on a topic of interest. From there, it created an avenue towards filtering words of choice from the established bag of words through a loop\n",
+    "It came down to formulating some of the words and terms that were presented in comparisons via the compare_words directive. I was curious to see which terms would come out on top. And thankfully, I have already commenced the Pandas Jupyter Experiment (using Kaggle's find of The Movies Dataset). Stop words are used to remove all less relevant words from a count to create a custom list based on a topic of interest. It created an avenue towards filtering words of choice from the established bag of words through a loop.\n",
     "\n",
     "```\n",
     "stop_words = ['a','of','my','up','rom','com','how','was','remotelyhow','set','was','by','k','ritmanplus','iconalex','ritmanu','k','correspondentmore', 'got','tip','u','for','and']\n",
@@ -148,8 +148,8 @@
    "source": [
     "### Basics Assignment #6\n",
     "\n",
-    "Stage Four: Convert from Dictionary to DataFrame and Display¶\n",
-    "Converting Dictionary to DataFrame enabled the areas of interest and attention to be more organized within the displayed objectives. This process helped my research focus on data and material that may benefit goals and access of interest.¶\n",
+    "\n",
+    "After moving around from different data sources, SCMS, Museum of the Moving Image, Film Quarterly, I got pulled in with \"The Voices of Doctor Who,\" with a valued list of others related to film areas of interest in DHQ. Incorporating this source pushed me to bring the examples of my understanding further. Discoveries, including my attempts with the Bonus section toward visualization solutions, are worthy of the assignment's goals. Allowing for Stage Four: Convert from Dictionary to DataFrame and Display. Where converting Dictionary to DataFrame enabled the areas of interest and attention to be more organized within the displayed objectives. This process helped my research focus on data and material that may benefit goals and interest access.¶\n",
     "\n",
     "```\n",
     "articles = pd.DataFrame(article_dict)\n",
