--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -166,10 +166,9 @@
    "metadata": {},
    "source": [
     "### Basics Assignment #7\n",
-    "Stage Five: Calculate the Euclidean distance between the documents, using two keywords as the point of comparison\n",
-    "Note: Nested four-loop compares and helps to avoid redundancy (loop logic solutions).\n",
+    "I was excited to see just by chance the film-focused .txt available found within Project Gutenberg's digital book repository. In examples such as \"Twelve Stories and a Dream\" of H.G. Wells to \"Night of the Living Dead\" of George A. Romero, the interest and fair use toward code this week. Here in Stage Five: Calculate the Euclidean distance between the documents, using two keywords as the point of comparison.\n",
     "\n",
-    "Euclidean distance's use allows for \"calculating the distance between two documents in a space, ... looks at the exact coordinates of the two documents: it connects them with a straight line, ...and returns the length of that line\" (Karsdopp, Kestemont, Riddell 100). As a result, the comparisons or calculated distances between supplied .txt brought interest and allowed comparisons.\n",
+    "Note: Nested four-loop compares and helps to avoid redundancy (loop logic solutions). Euclidean distance's use allows for \"calculating the distance between two documents in a space, ... looks at the exact coordinates of the two documents: it connects them with a straight line, ...and returns the length of that line\" (Karsdopp, Kestemont, Riddell 100). As a result, the comparisons or calculated distances between supplied .txt brought interest and allowed comparisons.\n",
     "```\n",
     "def euclidean_distance(a, b):\n",
     "    \"\"\"Compute the Euclidean distance between two vectors.\n",
@@ -212,7 +211,7 @@
    "source": [
     "### Basics Assignment #8\n",
     "\n",
-    "Stage One: Import Structured CSV Data (bonus: from multiple files)\n",
+    "Tackling cultural data on this assignment enforced incorporating historical components. And bringing in the relation of a data set pertaining to cinema opened up the possibilities and limits of the process. Here shown Stage One: Import Structured CSV Data (bonus: from multiple files)\n",
     "Blockbusters.csv was imported and placed into a file to help avoid any error toward access through separation. And with the use of Pandas, the tone was set to decipher and explore initial areas, and trends within Blockbusters.csv set as the data frame in question housed in the folder formed \"busters.\" As metadata in text, formatted documents can create value when kept \"in a tabular format\" (Karsdorp, Kestemont, and Riddell 126).\n",
     "\n",
     "```\n",
@@ -241,7 +240,7 @@
    "source": [
     "### Basics Assignment #9\n",
     "\n",
-    "And for symbolic reference with alternative visual, the use of the negative component of marriage 'divorce' was used to create a pie chart semblance counter with \"performance_counts = df['divorce'].value_counts().\" Where the discovery of \"value_counts()\" traditionally \"leaves out NaN values\" (Karsdorp, Kestemont, Riddell 27). Allowing for the reference exploration toward the use of \"Yes\" vs. \"No\" with little hindrance to help counteract the research exploration of the data, which became potently visual.\n",
+    "With Python mentorship and guidance, challenges became internal successes worth celebrating. And for symbolic reference with alternative visual, the use of the negative component of marriage 'divorce' was used to create a pie chart semblance counter with \"performance_counts = df['divorce'].value_counts().\" Where the discovery of \"value_counts()\" traditionally \"leaves out NaN values\" (Karsdorp, Kestemont, Riddell 27). Allowing for the reference exploration toward the use of \"Yes\" vs. \"No\" with little hindrance to help counteract the research exploration of the data, which became potently visual.\n",
     "\n",
     "```\n",
     "performance_counts = df['divorce'].value_counts()\n",
@@ -263,6 +262,8 @@
    "metadata": {},
    "source": [
     "### Basics Assignment #10\n",
+    "This week's challenge was data collection and mapping within defined coordinates and locational elements of social media (Twitter) Tweets. It was exploratory, as I initially had challenges with gaining developer approval and system toward locating files to use within a more doable size. But, I experimented with more confidence in the end which demonstrated freedom from the data size filtering.\n",
+    "\n",
     "Stage Five: Use at least one data visualization from a previous exercise, demo, or the course text to analyze a different element of your tweets.\n",
     "Today, most \"geographical maps using the package Cartopy, ...is Python's (emerging) standard for geospatial data processing and analysis\" (Karsdorp, Kestemont, and Riddell 230). And with the use of a \"Python library Cartopy... \" demonstrated how ...maps can help communicate a historical narrative (Karsdorp, Kestemont, and Riddell 244). We can plot a solution and move toward the bonus challenge of charting user interaction. And it was a bit realizing and humorous that along with the map, one location was visualized appropriately residing in Washington DC. The capital of the US.\n",
     "\n",
@@ -292,8 +293,9 @@
    "source": [
     "### Basics Assignment #11\n",
     "\n",
-    "Stage Three: Load the documents and titles and run the contents through vectorize, using the provided boilerplate\n",
-    "Working back to the directory and locating the nouns, now in shorter file formate from what was introduced previously where there was \"slicing\" needed to evoke the power of more extended documented power of works of novels, etc. Thus, the limits were dissipated to allow the more minor texts to travel throughout. With my inclusion of the Hollywood Reporter, I used the \"gitignore\" in response to the GB totals that I encountered. So, in many ways, initially, I was concerned for their length and the possible need for limits but was later relieved that they worked, even as a hybrid between the two reflected possibilities of choices journal articles vs. books [small vs. extensive document use or handling].\n",
+    "I took a chance with more prominent than the usual .pdf files from the text and imagery of the digital version of a series of The Hollywood Reporter choices. And it worked and allowed for the formulations and use of the code to lure visual elements from the text of a graphically displayed magazine. \n",
+    "\n",
+    "Stage Three: Load the documents and titles and run the contents through vectorize, using the provided boilerplate. Working back to the directory and locating the nouns, now in shorter file formate from what was introduced previously where there was \"slicing\" needed to evoke the power of more extended documented power of works of novels, etc. Thus, the limits were dissipated to travel throughout the more minor texts. With my inclusion of the Hollywood Reporter, I used the \"gitignore\" in response to the GB totals that I encountered. So, in many ways, initially, I was concerned for their length and the possible need for limits but was later relieved that they worked, even as a hybrid between the two reflected possibilities of choices journal articles vs. books [small vs. extensive document use or handling].\n",
     "\n",
     "```\n",
     "def load_directory(directory):\n",
@@ -341,6 +343,8 @@
    "source": [
     "### Basics Assignment #12\n",
     "\n",
+    "With the introduction of Wikipedia possibilities to this week's lesson, the film and entertainment industry relies on this free online encyclopedia.  That helps explore the subjectable elements toward locating areas of interest. Towards research perspectives, this is where the desire to figure out if any viable code links (pip install) existed with IMDb (aka Internet Movie Database).\n",
+    "\n",
     "\"Word Cloud\" generates some frequencies and sees the visually impactful visionary displays as practical strategies for finding the maximum parameters in typical mixture models with \"Expectation maximization\" is common. The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291).\n",
     "\n",
     "```\n",
@@ -371,7 +375,7 @@
    "source": [
     "### Basics Assignment #13\n",
     "\n",
-    "Stop words associated with limiting items toward being helpful as \"In the documentary film DNA Dreams, viewers are taken inside of \"the world's largest genomics organization,\"...Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)\" (Benjamin 114). As a result, the \"wordcloud\" enhancement accompanied by STOPWORDs directed updates enhances the summary above intelligently.\n",
+    "This week's challenge was impactful (WordCloud), and the final visual use of \"BokehJS\" really set the stage for future exploration and discovery. Below \"Stop Words\" were associated with limiting items toward being helpful as \"In the documentary film DNA Dreams, viewers are taken inside of \"the world's largest genomics organization,\"...Thousands of scientists are working there to uncover the genetics of intelligence (among other traits)\" (Benjamin 114). As a result, the \"wordcloud\" enhancement accompanied by STOPWORDs directed updates enhances the summary above intelligently.\n",
     "\n",
     "```\n",
     "from wordcloud import WordCloud, STOPWORDS\n",
@@ -402,9 +406,7 @@
    "source": [
     "### Basics Assignment #14\n",
     "\n",
-    "I was able to think of the coding benefits of exploring and organizing interest as I viewed this collection example.\n",
-    "\n",
-    "\"Describe your data collection scope and process briefly, and include an example of how you might collect your data drawing on our other projects. For example, if this workflow will collect Twitter data from a stream, you might revisit that demo, copy the stream, and adjust the hashtag\" (Salter).\n",
+    "Exploring the options towards Project Design, I have been able to find answers that will be helpful in my future dissertational pursuits. Which has dramatically increased the extent to which I can tell my story with guidance toward a coded choice of expression. Here, I thought of the coding benefits of exploring and organizing interest as I viewed this collection example.\n",
     "\n",
     "```\n",
     "# We'll need to extract our text from our novels, and we'll use regular expressions to start cleaning it of the Gutenberg header and footer \n",
