--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -584,6 +584,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -1926,7 +1931,7 @@
    "source": [
     "## Visualization: How will you visualize and explore your data? (BONUS)\n",
     "\n",
-    "Used variance in code and color, and size enabled for visualized experimentation and expression, as \"The creation of digital assets will then serve the project's overall design\" (Drucker 193). \"Word Cloud\" generates some frequencies and sees the visually impactful visionary displays as practical strategies for finding the maximum parameters in typical mixture models with \"Expectation maximization\" is common. The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291). Even though it is light in modes, HTML visual presentation does show the separation of scores of sentiment, etc., separated by light and dark components, as \"a repository like GitHub ...is an invaluable resource for anyone working on digital project development\" (Drucker 208)."
+    "Used variance in code and color, and size enabled for visualized experimentation and expression, as \"The creation of digital assets will then serve the project's overall design\" (Drucker 193). The scikit-learn library provides a convenient way of estimating the parameters here as \"following lines of code suffice to estimate all the parameters of interest\" (Karsdorp, Kestemont, Riddell 291). Even though it is light in modes, HTML visual presentation does show the separation of scores of sentiment, etc., separated by light and dark components, as \"a repository like GitHub ...is an invaluable resource for anyone working on digital project development\" (Drucker 208)."
    ]
   },
   {
