--- a/Assignment (Future).ipynb
+++ b/Assignment (Future).ipynb
@@ -1062,7 +1062,7 @@
    "source": [
     "\n",
     "### Round #2,\n",
-    "Became a valid association with remote discovery and exploration from the internet, which opens the door to understanding IMDb's option for downloading movie data."
+    "Became a valid association with remote discovery and exploration from the internet, which opens the door to understanding IMDb's option for downloading movie data (“Top 250 Movies” )"
    ]
   },
   {
@@ -2023,6 +2023,8 @@
     "Salter, Anastasia. University of Central Florida. Texts and Technology, 2021.\n",
     "\n",
     "Ganesh, Shiv Kumar. “How to Scrape IMDB Data Using Beautiful Soup.” Medium, Python in Plain English, 20 Apr. 2021, https://python.plainenglish.io/how-to-scrape-imdb-data-9d7535b98576.\n",
+    "\n",
+    "“Top 250 Movies.” IMDb, IMDb.com, https://www.imdb.com/chart/top.\n",
     "\n",
     "Turkel, William J., and Adam Crymble. “Code Reuse and Modularity in Python.” Programming Historian, 17 July 2012, https://programminghistorian.org/en/lessons/code-reuse-and-modularity.\n",
     "\n",
